# forex_bot_exness_200usd_DEMO

./: .env.example  .gitignore  README.md  pyproject.toml  tsconfig.tsbuildinfo
.kilocode/rules/memory-bank/: context.md
docker/: Dockerfile  docker-compose.yml
scripts/: backtest.py  create_agents.py  deploy_monitor.sh  init_db.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  factory.py  registry.py  supervisor.py  technical_agents.py
src/agents/asymmetric_hybrid/: __init__.py  adaptive_mixing.py  hybrid_core.py  skew_detector.py  weight_allocator.py
src/agents/execution/: __init__.py
src/agents/memory/: __init__.py  agent_memory.py  loss_memory.py
src/agents/perception/: __init__.py  macro.py  sentiment.py  technical.py
src/agents/risk/: __init__.py  global_risk.py  loss_controller.py  per_agent_risk.py
src/agents/strategy/: __init__.py  base_strategy.py  decision_making.py  momentum_strategy.py  signal_fusion.py
src/config/: __init__.py  backtest.py  base.py  live.py  paper.py
src/core/: __init__.py  event_bus.py  exceptions.py  logger.py  rabbitmq_client.py  redis_client.py  types.py  utils.py
src/dashboard/: __init__.py  app.py
src/dashboard/pages/: __init__.py  agents.py  overview.py  trades.py
src/data/: __init__.py
src/data/filters/: __init__.py  outlier_remover.py  smooth_filter.py  volume_filter.py
src/execution/: __init__.py  rate_limiter.py  smart_orders.py
src/notifications/: __init__.py  reports.py  telegram.py
src/orchestrator/: __init__.py  backtest.py  demo.py  hybrid_flow.py  live.py
(+20 files in other folders)
